# s2n-tls

./: .clinerules  .gitignore  CMakeLists.txt  progress.md  proposed_events.md
api/: s2n.h
api/unstable/: events.h
bindings/rust/: Cargo.toml
bindings/rust-examples/: Cargo.toml
bindings/rust-examples/external-psk/: Cargo.toml
bindings/rust-examples/external-psk/src/: lib.rs
bindings/rust-examples/kms-psk-provider/: Cargo.toml
bindings/rust-examples/kms-psk-provider/src/: client_hello_parser.rs  codec.rs  identity.rs  lib.rs  prefixed_list.rs  provider.rs  receiver.rs  test_utils.rs
bindings/rust-examples/s2n-tls-with-std-tcpstream/: Cargo.toml
bindings/rust-examples/s2n-tls-with-std-tcpstream/src/: lib.rs
bindings/rust-examples/session-resumption/: Cargo.toml  trial26877
bindings/rust-examples/session-resumption/certs/: generate.sh  test-cert.pem  test-key.pem
bindings/rust-examples/session-resumption/src/: lib.rs  main.rs  pair.rs
bindings/rust/bench/: .gitignore  Cargo.toml  output.txt
bindings/rust/bench/benches/: handshake.rs  resumption.rs  throughput.rs
bindings/rust/bench/certs/: dh.pem  ecdsa521  readme.md  rsapss2048
bindings/rust/bench/src/: bench_config.rs  crypto_config.rs  duchess_notes.md  fips.txt  harness.rs  java.rs  legacy_legacy_cipher.txt  lib.rs  mbedtls.rs  old_s2n_tls.rs  openssl.rs  rustls.rs  s2n_tls.rs  scanner.md  scanner.rs
bindings/rust/bench/src/harness/: bench_config.rs  mod.rs
bindings/rust/bench/src/scanner/: compliance.rs  security_policies.rs
bindings/rust/integration/: Cargo.toml  dump_annotation.txt
bindings/rust/integration/src/: lib.rs  main.rs
bindings/rust/integration/tests/: internet_cloudflare_pq.rs  internet_http_client.rs  internet_kms_pq.rs  internet_pq_client.rs  sni_match.rs  web_http_client.rs  web_pq_client.rs
bindings/rust/standard/bench/: Cargo.toml
bindings/rust/standard/bench/benches/: handshake.rs  handshake.txt  resumption.rs
bindings/rust/standard/bench/src/: lib.rs  openssl.rs  openssl_extension.rs  rustls.rs  s2n_tls.rs
bindings/rust/standard/bench/src/harness/: io.rs  mod.rs
bindings/rust/standard/bench/src/tests/: fragmentation.rs  mod.rs  record_padding.rs  record_sizing.rs  renegotiate.rs  session_resumption.rs
bindings/rust/standard/s2n-metrics-subscriber/: Cargo.toml  emf.json
bindings/rust/standard/s2n-metrics-subscriber/resources/: emf_sample.json  formatted.json
bindings/rust/standard/s2n-metrics-subscriber/src/: cloudwatchlogs_exporter.rs  emf_emitter.rs  lib.rs  record.rs  static_lists.rs  subscriber.rs  test_utils.rs
codebuild/spec/: buildspec_rust_integration_nix.yml
crypto/: s2n_certificate.c  s2n_certificate.h  s2n_dhe.c  s2n_rfc_9151_rules.c  s2n_rfc_9151_rules.h
doxygen/: deprecated.html  dir_0188a3e6da905bc60aceb35bf790b8c9.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  pages.html  s2n_8h.html  s2n_8h_source.html
scram/: aes_scram.py
scripts/: s2n_safety_macros.py
stuffer/: s2n_stuffer.c
tests/: generate_certs.py
tests/SSLv2/: README.md  test_sslv2_handshake.c
tests/integration_c/: test_sslv2_handshake.c
tests/integrationv2/: common.py  configuration.py  conftest.py  constants.py  duchess.md  fixtures.py  global_flags.py  processes.py  providers.py  test_buffered_send.py  test_client_authentication.py  test_cross_compatibility.py  test_dynamic_record_sizes.py  test_early_data.py  test_external_psk.py  test_fragmentation.py  test_happy_path.py  test_hello_retry_requests.py  test_key_update.py  test_npn.py  test_ocsp.py  test_pq_handshake.py  test_record_padding.py  test_renegotiate.py  test_renegotiate_apache.py  test_session_resumption.py  test_signature_algorithms.py  test_sni_match.py  test_sslv2_client_hello.py  test_sslyze.py  test_version_negotiation.py  test_well_known_endpoints.py  utils.py
tests/interop/: .gitignore  README.md
tests/interop/tls-shim-interop/: Cargo.toml  README.md  simple.md
tests/interop/tls-shim-interop/src/: lib.rs  openssl_shim.rs  rustls_shim.rs  s2n_tls_shim.rs
tests/interop/tls-shim-interop/tests/: turmoil.rs
tests/sslyze/: pyproject.toml  scan_test.py
tests/testlib/: s2n_connection_test_utils.c  s2n_test_certs.c  s2n_test_server_client.c  s2n_testlib.h
tests/unit/: s2n_alerts_test.c  s2n_asan_test.c  s2n_cert_chain_and_key_test.c  s2n_cert_description_test.c  s2n_cipher_suite_match_test.c  s2n_client_hello_recv_test.c  s2n_client_hello_retry_test.c  s2n_client_hello_test.c  s2n_client_signature_algorithms_extension_test.c  s2n_client_supported_versions_extension_test.c  s2n_config_test.c  s2n_connection_preferences_test.c  s2n_connection_size_test.c  s2n_connection_test.c  s2n_events_test.c  s2n_extension_type_test.c  s2n_fips_test.c  s2n_key_update_test.c  s2n_ktls_test.c  s2n_map_test.c  s2n_mem_allocator_test.c  s2n_random_test.c  s2n_record_test.c  s2n_security_policies_test.c  s2n_security_policy_cert_preferences_test.c  s2n_self_talk_broken_pipe_test.c  s2n_self_talk_ktls_test.c  s2n_self_talk_psk_test.c  (+11 more)
tls/: s2n_alerts.c  s2n_certificate_keys.c  s2n_certificate_keys.h  s2n_certificate_signatures.c  s2n_certificate_signatures.h  s2n_cipher_preferences.c  s2n_cipher_preferences.h  s2n_cipher_suites.c  s2n_cipher_suites.h  s2n_client_cert.c  s2n_client_cert_verify.c  s2n_client_finished.c  s2n_client_hello.c  s2n_client_key_exchange.c  s2n_config.c  s2n_config.h  s2n_connection.c  s2n_connection.h  s2n_early_data.c  s2n_handshake.c  s2n_handshake_io.c  s2n_handshake_transcript.c  s2n_key_update.c  s2n_ktls.c  s2n_ocsp_stapling.c  s2n_psk.c  s2n_psk.h  s2n_record_read.c  s2n_record_write.c  s2n_recv.c  s2n_resume.c  s2n_security_policies.c  s2n_security_policies.h  s2n_security_rules.c  s2n_security_rules.h  s2n_send.c  s2n_server_cert.c  s2n_server_finished.c  s2n_server_hello.c  s2n_server_key_exchange.c  (+8 more)
utils/: s2n_blob.c  s2n_event.c  s2n_event.h  s2n_events.c  s2n_events.h  s2n_init.c  s2n_log.c  s2n_log.h  s2n_map.c  s2n_mem.c  s2n_prelude.h  s2n_random.c
(+129 files in other folders)
