[tool.poetry]
name = "s2n_tls_sslyze_tests"
version = "0.1.0"
description = "Integration tests for s2n-tls using sslyze"
authors = ["James Mayclin <maycj@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sslyze = "^6.0.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
