[package]
name = "external-psk"
version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
aws-lc-rs = "1.7.1"
rang = "0.1.1"
s2n-tls = { path = "../../rust/s2n-tls" }
s2n-tls-tokio = { path = "../../rust/s2n-tls-tokio" }
tokio = "1.37.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
turmoil = "0.6.2"
