[package]
name = "s2n-tls-with-std-tcpstream"
version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
errno = "0.3.13"
libc = "0.2.174"
s2n-tls = { path = "../../rust/extended/s2n-tls" }
tokio = { version = "1", features = ["full"] }
