[package]
name = "session-resumption"
version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
aws-lc-rs = "1.7.2"
errno = "0.3.9"
futures-task = "0.3.30"
hex = "0.4.3"
libc = "0.2.155"
s2n-tls = { path = "../../rust/s2n-tls" }
s2n-tls-tokio = { path = "../../rust/s2n-tls-tokio" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
turmoil = "0.6.2"
