[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[features]
default = ["rustls", "openssl"]
rustls = ["dep:rustls", "rustls-pemfile"]
openssl = ["dep:openssl"]
memory = ["plotters", "crabgrind", "structopt"]
historical-perf = ["plotters", "semver"]

[dependencies]
s2n-tls = { version = "*" }
errno = "0.3"
libc = "0.2"
strum = { version = "0.25", features = ["derive"] }
rustls = { version = "0.21", optional = true }
rustls-pemfile = { version = "1.0", optional = true }
openssl = { git = "https://github.com/jmayclin/rust-openssl.git", branch = "signature-info-with-weak-crypto", optional = true, features = ["vendored"]}
crabgrind = { version = "0.1", optional = true }
structopt = { version = "0.3", optional = true }
serde_json = { version = "1.0" }
semver = { version = "1.0", optional = true }
tracing = "0.1"
log = "0.4"
env_logger = "0.10"
rayon = "1.8.0"
tokio = "1.33.0"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9.25"
rand = "0.8.5"

# Figure out the exact mechanics of this pinning later.
openssl-src = {version = "*", features = ["legacy", "weak-crypto"]}

[dependencies.plotters]
version = "0.3"
optional = true
default-features = false
features = ["all_series", "all_elements", "full_palette", "svg_backend"]

[dev-dependencies]
criterion = "0.5"
pprof = { version = "0.12", features = ["criterion", "flamegraph"] }
# env_logger and log are used to enable logging for rustls, which can help with
# debugging interop failures
env_logger = "0.10"
log = "0.4"


[[bin]]
name = "memory"
required-features = ["memory"]

[[bin]]
name = "graph_memory"
required-features = ["memory"]

[[bin]]
name = "graph_perf"
required-features = ["historical-perf"]

[[bench]]
name = "handshake"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "resumption"
harness = false
