[package]
name = "integration"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"
publish = false

[dependencies]
s2n-tls = { path = "../s2n-tls"}
s2n-tls-sys = { path = "../s2n-tls-sys" }
s2n-tls-hyper = { version = "0.0.1", path = "../s2n-tls-hyper" }
criterion = { version = "0.3", features = ["html_reports"] }
anyhow = "1"
unicode-width = "=0.1.13" # newer versions require newer rust, see https://github.com/aws/s2n-tls/issues/4786
bytes = "1.8.0"
http = "1.1.0"
s2n-tls-tokio = { version = "0.3.6", path = "../s2n-tls-tokio" }

[[bench]]
name = "s2nc"
harness = false

[[bench]]
name = "s2nd"
harness = false

[dev-dependencies]
hyper-util = "0.1.10"
http-body-util = "0.1.2"
regex = "=1.9.6" # newer versions require rust 1.65, see https://github.com/aws/s2n-tls/issues/4242
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
tokio = { version = "1", features = ["macros", "test-util"] }
