[package]
name = "bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
s2n-tls = { path = "../../extended/s2n-tls" }
errno = "0.3"
libc = "0.2"
strum = { version = "0.25", features = ["derive"] }
rustls = { version = "0.23" }
rustls-pemfile = { version = "2" }
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"]}

foreign-types-shared = "0.1.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.5"
pprof = { version = "0.14", features = ["criterion", "flamegraph"] }
# env_logger and log are used to enable logging for rustls, which can help with
# debugging interop failures
env_logger = "0.10"
log = "0.4"
symbolic-common = { version = "=12.13.4" } # newer versions require rust 1.82.0, see https://github.com/aws/s2n-tls/issues/5165


