[package]
name = "bench"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["renegotiate"]
renegotiate = ["s2n-tls/unstable-renegotiate"]

[dependencies]
s2n-tls = { path = "../../extended/s2n-tls" }
errno = "0.3"
libc = "0.2"
strum = { version = "0.27", features = ["derive"] }
rustls = { version = "0.23" }
rustls-pemfile = { version = "2" }
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"]}

foreign-types-shared = "0.1.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
itertools = "0.14.0"
anyhow = "1.0.98"

[dev-dependencies]
criterion = "0.6"
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }
# env_logger and log are used to enable logging for rustls, which can help with
# debugging interop failures
env_logger = "0.11"
log = "0.4"


