[package]
name = "s2n-metrics-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
# aws-sdk-cloudwatch = "1.78.0"
s2n-tls = { version = "=0.3.33", path = "../../extended/s2n-tls", features = ["unstable-events", "unstable-testing"] }
s2n-tls-tokio = { version = "=0.3.33", path = "../../extended/s2n-tls-tokio" }
tracing = "0.1.43"

metrique = "0.1.6"
metrique-writer-format-emf = "0.1.6"
metrique-writer = "0.1.7"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"
aws-sdk-cloudwatch = "1.93.0"
tokio = { version = "1", features = [ "io-std", "io-util", "macros", "net", "rt-multi-thread", "test-util", "time"] }
aws-config = "1.8.7"
aws-sdk-cloudwatchlogs = "1.104.0"
brass-aphid-wire-messages = "0.0.1"
arc-swap = "1.8.0"




[dev-dependencies]
s2n-tls-sys-internal = { path = "../s2n-tls-sys-internal" }
